# file_cabinet

./: .gitignore  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/auth/: authorization.rs
api/src/data/: create_docs.rs  docs.rs  get_docs.rs  mod.rs  patch_docs.rs
api/src/data/models/: doc.rs  mod.rs  tags.rs
api/src/extract/: docs.rs  mod.rs
api/src/extract/models/: doc.rs  mod.rs  reply.rs
api/src/routing/: mod.rs  routes.rs
api/src/routing/db/: db_resource.rs  mod.rs
api/src/routing/docs/: docs.rs
api/src/server/: reply.rs
