[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "^0.3.1"
futures = "0.3"

[dependencies.mongodb]
version = "2.0.1"
default-features = false
features = ["tokio-runtime"]
